# whirlwind-insar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ATBD-3d.md  ATBD-whirlwind.md  Cargo.toml  Dockerfile  ENV_VARS.md  LICENSE  README.md  RELEASING.md  TILING_DESIGN.md  figures  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/workflows/: CI.yml  bump-version.yml  docker.yml  release.yml
aws-batch/: ARCH_COMPARISON.md  CONNCOMP_FLOOR_EXPERIMENT.md  Dockerfile  LOCAL_BENCH.md  README.md  aggregate_results.py  compare_gunw.py  discover_granules.py  job-definition.json  make_synthetic_gunw.py  run_local.py  sample_granules.txt  submit_batch.py
aws-batch/isce3_integration/: README.md  whirlwind_unwrap.py
crates/whirlwind-cli/: Cargo.toml
crates/whirlwind-cli/src/: formats.rs  lib.rs  main.rs
crates/whirlwind-cli/tests/: cli_flat.rs
crates/whirlwind-core/: Cargo.toml
crates/whirlwind-core/examples/: bench_scale.rs
crates/whirlwind-core/src/: bridge.rs  closure.rs  conncomp.rs  cycle_cancel.rs  goldstein.rs  grid.rs  integrate.rs  interpolate.rs  lib.rs  network.rs  primal_dual.rs  pyramid.rs  residual_graph.rs  residue.rs  simulate.rs  sparse.rs  ssp.rs  tile.rs  triangulated.rs
crates/whirlwind-core/src/cost/: hyp2f1.rs  lee_pdf.rs  lut.rs  mod.rs  spline_lut.rs
crates/whirlwind-core/src/shortest_path/: dial.rs  heap.rs  mod.rs
crates/whirlwind-core/tests/: convex_solver_probe.rs  end_to_end.rs
crates/whirlwind-py/: Cargo.toml  pyproject.toml
crates/whirlwind-py/src/: lib.rs
docs/: ALGORITHM.md  ATBD-3d.md  ATBD-whirlwind.md  BAYESIAN.md  BRIDGING.md  BUG_NISAR_CRYO_STACKED_CUTS.md  BUG_RIDGECREST_STRANDED_RESIDUES.md  CONNCOMP_TUNING.md  ENV_VARS.md  MEMORY_AND_SCALING.md  NISAR_HARD_FRAMES_HANDOFF.md  NISAR_SUMMARY.md  PERFORMANCE.md  PERF_SSP_TAIL.md  PHASS_SPEED.md  SNAPHU_PHASS_SPEED.md  TILING_DESIGN.md  comparison_to_dolphin.json  index.md  nisar_4way_results.csv  references.bib  requirements.txt
experiments/: ATBD-3d.md  PHASS_SPEED.md  README.md  SNAPHU_PHASS_SPEED.md  SPEED_VS_ORIGINAL.md  TILING_DESIGN.md  bench_nisar_gunw_tiled_solver.md  plot_conncomp_gating_compare.py  proto_looks_aware_conncomp.py  proto_tile_linear.py  validate_conncomp_008.py
nisar-comparison/input/: meta.json
paper/: .gitignore  PAPER_TODO.md  README.md  binary_vs_continuous.md  connected_components.md  convex_cost_design.md  different_vs_snaphu_costs.md  goldstein_ab.md  handoff.md  nisar_gunw_bench.md  phase_unwrapping_skeptical_review.md  phass_experiments.md  pyramid_aliasing.md  recent_phase_unwrapping_skeptical_review.md  report_2026-06-01.md  report_anchor_cascade.md  tiling.md  unwrapper_comparison.md  whirlwind3d.tex  why_whole_image_runs_away.md
python/tests/: bridge_reference.py  test_bridge_parity.py  test_cli_entry.py  test_gunw_mask_policy.py  test_nisar_gunw_integration.py  test_unwrap.py
python/whirlwind/: __init__.py  __init__.pyi  _bridge.py  _climain.py  _native.pyi  plot.py
python/whirlwind_rs/: __init__.py  __init__.pyi  _native.pyi
scripts/: README.md  ab_water_mask_cost.py  analyze_d077.py  bench.py  bench_bridge_all.py  bench_heavy.py  bench_nisar_gunw_whirlwind.py  bench_reuse_vs_linear.py  bench_tile_memory.py  bench_vs_snaphu.py  bench_vs_whirlwind_cpp.py  binary_vs_continuous_plots.py  binary_vs_continuous_pv.py  binary_vs_continuous_synth.py  cache_bridge_arrays.py  coh_bias_ab.py  compare_to_dolphin_timeseries.py  compare_to_dolphin_unwrapped.py  conncomp_demo.py  conncomp_validate.py  cost_model_bench.py  cost_model_real_ab.py  crop_sweep_d077.py  dense_fringe_pyramid.py  diag_a025.py  diag_bridge_isce3_compare.py  diag_bridge_partition.py  diag_cost_compare.py  diag_cost_regression.py  diag_cost_table_compare.py  diag_divergence.py  diag_masked_plane_tear.py  diag_nisar_cutrate.py  diag_pd_only.py  diag_seacost.py  diag_tear_capacity_hypothesis.py  estimate_gunw_enl.py  generate_carballo_tables.py  heavy_scene.py  icu_isce2_run.py  (+63 more)
scripts/archive/: _assemble_atbd.py  _dbg_rust_only.py  _test_default_unwrap.py  analyze_d077.py  bench.py  bench_heavy.py  bench_tile_memory.py  bench_vs_snaphu.py  bench_vs_whirlwind_cpp.py  binary_vs_continuous_plots.py  binary_vs_continuous_pv.py  binary_vs_continuous_synth.py  coh_bias_ab.py  compare_phass_ww.py  compare_to_dolphin_unwrapped.py  conncomp_validate.py  convex_mode_crop.py  cost_model_bench.py  cost_model_real_ab.py  dense_fringe_pyramid.py  diag_crlb_eval.py  diag_nisar_cutrate.py  diag_python_costs.py  flatten_refine_d077.py  headtohead_orig_vs_rust.py  heavy_scene.py  make_figures.py  nisar_sparse_demo.py  nisar_ww_vs_snaphu.py  plot_crlb_confidence.py  plot_crlb_mexico.py  profile_nisar_runtime.py  pyramid_2_vs_n.py  pyramid_auto_base.py  report_goldstein_ab.py  repro_a013_blowup.py  snaphu_nisar_compare.py  synthetic_truth_compare.py  test_linear_vs_reuse_d077.py  tiled_match.py  (+5 more)
scripts/phass_experiments/: README.md  analyze.py  bench_nisar_gunw.py  bigtile_anchor_proto.py  compare_dolphin_phass.py  cost_corner_test.py  diag_d074_regression.py  diag_seam_4032.py  make_atlanta_report.py  make_report_figures.py  plot_a016_fixed.py  plot_atlanta.py  plot_convex.py  plot_nisar_anchor.py  plot_nisar_phase_hires.py  plot_nisar_variants.py  proto_block_reconcile.py  proto_coh_relevel.py  proto_region_secondary.py  proto_shift_selector.py  region_reopt_proto.py  reuse_tile_sweep.py  run_all.py  run_atlanta.py  run_atlanta5_convex.py  run_final_verify.py  run_grounded.py  run_nisar_anchor.py  run_pv_watermask.py  run_reuse.py  run_reuse_backend.py  run_reuse_faithful.py  run_reuse_hardcut.py
scripts/phass_experiments/analyze/: analyze.py  analyze_atlanta.py
scripts/phass_experiments/bench/: bench_default_robust.py  bench_nisar_gunw.py  compare_dolphin_phass.py
scripts/phass_experiments/diag/: diag_a016_connectivity.py  diag_a016_geometry.py  diag_anchor_lk_sweep.py  diag_d074_regression.py  diag_gunw_anchor.py  diag_gunw_edge.py  diag_gunw_pyramid.py  diag_nisar_vlines.py  diag_seam_rawphase.py  (+2 more)
scripts/release_prep/: file_issues.py
(+45 files in other folders)
