[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "whirlwind-insar"
# Version is the single source of truth in Cargo.toml ([workspace.package].version);
# maturin reads it from there because `version` is declared dynamic here.
dynamic = ["version"]
description = "Rust-backed 2D phase unwrapper for InSAR (`import whirlwind`)"
requires-python = ">=3.11"
authors = [{ name = "Scott Staniewicz", email = "scott.stanie@utexas.edu" }]
# Classic table form so both older (<1.8) and newer maturin accept it; the SPDX
# string + `license-files` array (PEP 639) needs maturin >=1.8.
license = { file = "LICENSE" }
dependencies = ["numpy>=1.21"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "whirlwind._native"
manifest-path = "crates/whirlwind-py/Cargo.toml"

# ---------------------------------------------------------------------------
# Dev environment (uv-managed). The published wheel is built from the
# [project] / [tool.maturin] tables above; the [dependency-groups] below
# are for working *on* the repo and don't ship in the wheel.
#
# Quick start:
#   uv sync                                 # create venv + install all groups
#   uv run maturin develop --release        # editable Rust build into the venv
#   uv run pytest python/tests              # run python tests
#   uv run python scripts/bench.py          # cross-library bench
# ---------------------------------------------------------------------------

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-randomly>=3",
]
bench = [
    # Cross-library comparison via `python scripts/bench.py`.
    # snaphu is the canonical reference unwrapper. kamui (PUMA) is optional
    # and tends to use 10+ GiB on >= 1024² scenes - skip with `--no-kamui`.
    "snaphu>=0.4",
    "kamui>=0.1.2",
    "matplotlib>=3.7",
]
real-data = [
    "rasterio>=1.4.3",
]
dev = [
    "memory-profiler>=0.61.0",
    "whirlwind-orig",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[tool.uv]
default-groups = ["test", "bench"]

[tool.uv.sources]
whirlwind-orig = { path = "../whirlwind" }
