[package]
name = "whirlwind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
rayon.workspace = true
bitvec.workspace = true
rand.workspace = true
rand_distr.workspace = true
rustfft.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
libc = "0.2"

[[example]]
name = "bench_scale"
path = "examples/bench_scale.rs"
