[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "whirlwind-rs"
version = "0.1.0"
description = "Bayesian min-cost-flow phase unwrapper for InSAR (Rust)"
requires-python = ">=3.9"
authors = [{ name = "Scott Staniewicz", email = "scott.stanie@utexas.edu" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.21"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "../../python"
module-name = "whirlwind_rs._native"
manifest-path = "Cargo.toml"
