[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "whirlwind-unwrap"
version = "0.1.0"
description = "Bayesian min-cost-flow phase unwrapper for InSAR (Rust-backed; `import whirlwind`)"
requires-python = ">=3.11"
authors = [{ name = "Scott Staniewicz", email = "scott.stanie@utexas.edu" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy>=1.21"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "../../python"
module-name = "whirlwind._native"
manifest-path = "Cargo.toml"
